Java 17 upgrade; fix deprecations (#18)
* Use latest maven-war-plugin
* Set version string so log dir is correct